--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
         <activity
-            android:name=".FindidActivity"
+            android:name=".FindPasswwodActivity"
             android:exported="false" />
         <activity
             android:name=".SignupActivity"
