--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
+
         <activity
+            android:screenOrientation="portrait"
             android:name=".NaviActivity"
             android:exported="false" />
         <activity
-            android:name=".BottomBarActivity"
-            android:exported="false" />
-        <activity
+            android:screenOrientation="portrait"
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".FindPasswordActivity"
             android:exported="false" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".SignupActivity"
             android:exported="false" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
