--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
         <activity
+            android:name=".ResetPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".mypage_gonggu"
             android:exported="false" />
         <activity
@@ -20,6 +23,9 @@
             android:exported="false" />
         <activity
             android:name=".mypage_scrap"
+            android:exported="false" />
+        <activity
+            android:name=".LeisureWritingActivity"
             android:exported="false" />
         <activity
             android:name=".CommunityWritingActivity"
