--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
         <activity
+            android:name=".RecipeWritingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GongguWritingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReportActivity"
+            android:exported="false" />
+        <activity
             android:name=".ResetPasswordActivity"
             android:exported="false" />
         <activity
