--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,40 +13,52 @@
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
         <activity
-            android:name=".RecipeWritingActivity"
+            android:screenOrientation="portrait"
+            android:name=".WritingActivity.RecipeWritingActivity"
             android:exported="false" />
         <activity
-            android:name=".GongguWritingActivity"
+            android:screenOrientation="portrait"
+            android:name=".WritingActivity.GongguWritingActivity"
             android:exported="false" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".ReportActivity"
             android:exported="false" />
         <activity
-            android:name=".Post_Inside_Community"
+            android:screenOrientation="portrait"
+            android:name=".PostActivity.Post_Inside_Community"
             android:exported="false" />
         <activity
-            android:name=".Post_Inside_Playing"
+            android:screenOrientation="portrait"
+            android:name=".PostActivity.Post_Inside_Playing"
             android:exported="false" />
         <activity
-            android:name=".Post_Inside_09"
+            android:screenOrientation="portrait"
+            android:name=".PostActivity.Post_Inside_09"
             android:exported="false" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".ResetPasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".mypage_gonggu"
+            android:screenOrientation="portrait"
+            android:name=".MyPageActivity.mypage_gonggu"
             android:exported="false" />
         <activity
-            android:name=".mypage_mywrite"
+            android:screenOrientation="portrait"
+            android:name=".MyPageActivity.mypage_mywrite"
             android:exported="false" />
         <activity
-            android:name=".mypage_scrap"
+            android:screenOrientation="portrait"
+            android:name=".MyPageActivity.mypage_scrap"
             android:exported="false" />
         <activity
-            android:name=".LeisureWritingActivity"
+            android:screenOrientation="portrait"
+            android:name=".WritingActivity.LeisureWritingActivity"
             android:exported="false" />
         <activity
-            android:name=".CommunityWritingActivity"
+            android:screenOrientation="portrait"
+            android:name=".WritingActivity.CommunityWritingActivity"
             android:exported="false" />
         <activity
             android:name=".NaviActivity"
