--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -14,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
+        <activity
+            android:name=".PostActivity.Post_Inside_Recipe"
+            android:exported="false" />
         <activity
             android:name=".WritingActivity.JachitemWritingActivity"
             android:exported="false" />
