--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.JachiSignal"
         tools:targetApi="31">
         <activity
+            android:name=".PostActivity.Post_Inside_09_2"
+            android:exported="false" />
+        <activity
             android:name=".PostActivity.Post_Inside_Jachitem"
             android:exported="false" />
         <activity
